themes/qbs/assets/css/main.css
@tailwind base;
@tailwind utilities;
@tailwind components;

.bg-banner {
    background: linear-gradient(96.34deg, #1FF1A0 0%, #00D485 100%);
}

@media (prefers-color-scheme: dark) {
    .bg-banner {
        background: linear-gradient(96.34deg, rgba(31, 241, 160, 0.5) 0%, rgba(0, 212, 133, 0.5) 100%);
    }
}

.effect-shadow-small {
    filter: drop-shadow(0px 0px 16px rgba(0, 0, 0, 0.35));
}

.effect-shadow {
    filter: drop-shadow(0px 0px 24px rgba(0, 0, 0, 0.25));
}

main article a {
    color: #00D485;
    text-decoration: underline;
}

main article h1, main article .title {
    @apply text-2xl;
    @apply font-bold;
}

main article h2, main article .subtitle {
    @apply text-xl;
    @apply font-medium;
}

.content h2 {
    @apply text-2xl;
}

.content h3 {
    @apply text-xl;
}

main article li {
    @apply ml-4;
}

main article p + p {
    @apply mt-3;
}

main article table.alignedsummary {
    @apply mt-2;
    @apply mb-2;
    @apply border;
}

main article table td, main article table th {
    @apply border;
    @apply p-3;
}

.naviNextPrevious, .headerNavi, .footerNavi, .sidebar, main article > li {
    display: none;
}

main article {
    @apply mt-8;
    @apply mb-8;
}

.blog h2, .blog h3 {
    @apply font-medium;
}

.blog h2 {
    @apply mt-8;
}

.blog h3 {
    @apply mt-3;
}

.blog ul {
    @apply list-disc;
}

.blog ol {
    @apply list-decimal;
}

.blog p, .blog ul, .blog ol {
    @apply max-w-full;
}

.centre-outer {
    @apply flex;
    @apply md:flex-col;
    @apply items-center;
    @apply mt-8;
}

.centre-inner {
    @apply max-w-screen-md;
    @apply w-full;
    @apply pl-4;
    @apply pr-4;
}

.blog pre {
    @apply px-8;
    @apply py-4;
    @apply my-4;
    @apply border;
    @apply border-gray-50;
    @apply dark:border-gray-600;
    @apply p-4;
    @apply rounded;
    @apply overflow-x-scroll;
}

